[package]
name = "reth-ethereum-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-cli.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true

# misc
eyre.workspace = true
once_cell.workspace = true
alloy-chains.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
serde_json.workspace = true
lz4_flex.workspace = true
revm = { workspace = true, features = ["serde"] }
serde.workspace = true
rmp-serde.workspace = true
reqwest = { workspace = true }

[dev-dependencies]
clap.workspace = true
reth-cli-commands.workspace = true
